XIVYWF-205 Show starts on home if not logged in
Also renamed 2 functions in loginBean for easier understanding

--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -22,7 +22,7 @@
               </p:commandLink>
             </li>
             <li role="menuitem">
-              <p:commandLink actionListener="#{loginBean.redirectToLoginPage}">
+              <p:commandLink actionListener="#{loginBean.redirectToLoginForm}">
                 <i class="si si-lg si-login-3"></i>
                 <span>Login</span>
               </p:commandLink>
