--- a/workflow-ui/webContent/view/home.xhtml
+++ b/workflow-ui/webContent/view/home.xhtml
@@ -6,9 +6,17 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
+      <h:panelGroup layout="block" rendered="#{!loginBean.loggedIn}"
+        styleClass="ui-message ui-staticmessage ui-message-warn">
+        <span class="ui-message-warn-icon"></span>
+        <span class="ui-message-warn-summary">Warning</span>
+        <span class="ui-message-warn-detail">Please
+          <a href="#{engineModeBean.demoOrDesigner ? 'loginTable' : 'login'}.xhtml"> log in</a> to enable all features.
+        </span>
+      </h:panelGroup>
       <h:form id="form">
         <p:panelGrid columns="2" layout="grid" styleClass="custom-grid"
-          columnClasses="ui-g-12 ui-lg-4, ui-g-12 ui-lg-8">
+          columnClasses="ui-g-12 ui-lg-4, ui-g-12 ui-lg-8" rendered="#{loginBean.loggedIn}">
 
           <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
             <div class="straight-text-icon card-header-title">
@@ -70,6 +78,12 @@
           </h:panelGroup>
 
         </p:panelGrid>
+        <h:panelGroup styleClass="card card-w-title custom-card" layout="block" rendered="#{!loginBean.loggedIn}">
+          <div class="straight-text-icon card-header-title">
+            <h:outputText value="Starts"/>
+          </div>
+          <ui:include src="/includes/components/startsPanel.xhtml"/>
+        </h:panelGroup>
       </h:form>
     </ui:define>
   </ui:composition>
