--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -12,7 +12,7 @@
         <li id="sessionUser" class="profile-item">
           <a href="#">
             <span class="profile-image-wrapper"> <i class="si si-single-neutral-circle" style="font-size: 36px; padding: 2px"></i>
-            </span> <span id="sessionUserName" class="topbar-item-name profile-name">#{ivyJsfWfHelper.currentUserName}</span>
+            </span><h:outputText id="sessionUserName" class="topbar-item-name profile-name" value="#{userBean.currentUserName}" />
           </a>
           <ul class="animated" style="right: 5px">
             <li role="menuitem">
@@ -29,7 +29,7 @@
             </li>
             <li role="menuitem">
               <p:commandLink id="sessionLogoutBtn" actionListener="#{loginBean.logout}"
-                rendered="#{!ivyJsfWfHelper.sessionUserUnknown}">
+                rendered="#{!userBean.sessionUserUnknown}">
                 <i class="si si-lg si-logout-1"></i><span>Logout</span>
               </p:commandLink>
             </li>
