--- a/workflow-ui/webContent/view/login.xhtml
+++ b/workflow-ui/webContent/view/login.xhtml
@@ -27,7 +27,7 @@
         <p:focus for="#{loginBean.focus()}" />
         <div class="ui-g">
           <div class="ui-g-12">
-            <h1>Sign-in</h1>
+            <h1>Login</h1>
           </div>
           <div class="ui-g-12">
             <p:messages globalOnly="true" id="loginMessage" />
@@ -47,7 +47,7 @@
             </h:panelGroup>
           </div>
           <div class="ui-g-12">
-            <p:commandButton update="@form" id="login" actionListener="#{loginBean.customLogin}" value="Sign In"
+            <p:commandButton update="@form" id="login" actionListener="#{loginBean.customLogin}" value="Sign in"
               icon="si si-login-3" />
           </div>
         </div>
