--- a/workflow-ui/webContent/view/frame.xhtml
+++ b/workflow-ui/webContent/view/frame.xhtml
@@ -6,15 +6,91 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <div class="card custom-card">
-        <iframe id="iFrame" src="#{frameBean.taskUrl}" onload="checkUrl(this)" style="height: calc(100vh - 195px); width: 100%; border: 0;"></iframe>
+        <iframe id="iFrame" src="#{frameBean.taskUrl}"
+          style="height: calc(100vh - 195px); width: 100%; border: 0;"></iframe>
       </div>
       <script>
-      function checkUrl(iFrame) {
-        if (iFrame.contentWindow.location.pathname.match("/default/redirect.xhtml$")) {
-          window.location = new URLSearchParams(iFrame.contentWindow.location.search).get("redirectPage");
+
+        function iframeURLChange(iframe, callback) {
+          var lastDispatched = null;
+
+          var dispatchChange = function() {
+            var newHref = iframe.contentWindow.location.href;
+
+            if (newHref !== lastDispatched) {
+              callback(newHref, iframe);
+              lastDispatched = newHref;
+            }
+          };
+
+          var unloadHandler = function() {
+            // Timeout needed because the URL changes immediately after
+            // the `unload` event is dispatched.
+            setTimeout(dispatchChange, 0);
+          };
+
+          function attachUnload() {
+            // Remove the unloadHandler in case it was already attached.
+            // Otherwise, there will be two handlers, which is unnecessary.
+            iframe.contentWindow.removeEventListener("unload", unloadHandler);
+            iframe.contentWindow.addEventListener("unload", unloadHandler);
+          }
+
+          iframe.addEventListener("load", function() {
+            attachUnload();
+
+            // Just in case the change wasn't dispatched during the unload event...
+            dispatchChange();
+          });
+
+          attachUnload();
         }
-      }
-    </script>
+
+        function checkAndReturnUrl(newURL, originPage) {
+          if (newURL.includes('?endedTaskId=')) {
+            return originPage;
+          }
+          if (newURL.endsWith('/faces/home.xhtml') || newURL.includes('DefaultApplicationHomePage.ivp') || newURL.endsWith('/app/home.xhtml')) {
+            return 'home.xhtml';
+          }
+          if (newURL.endsWith('/faces/tasks.xhtml') || newURL.includes('DefaultTaskListPage.ivp') || newURL.endsWith('/app/tasks.xhtml')) {
+            return 'tasks.xhtml';
+          }
+          if (newURL.endsWith('/faces/starts.xhtml') || newURL.includes('DefaultProcessStartListPage.ivp') || newURL.endsWith('/app/starts.xhtml')) {
+            return 'starts.xhtml';
+          }
+          if (newURL.endsWith('/faces/login.xhtml') || newURL.includes('DefaultLoginPage.ivp') || newURL.endsWith('/app/login.xhtml')) {
+            return 'login.xhtml';
+          }
+          if (newURL.endsWith('/faces/loginTable.xhtml')) {
+            return 'loginTable.xhtml';
+          }
+          if (newURL.endsWith('/faces/end.xhtml') || newURL.includes('DefaultEndPage.ivp') || newURL.endsWith('/app/end.xhtml')) {
+            return originPage;
+          }
+          return undefined;
+        }
+
+        iframeURLChange(document.getElementById("iFrame"), function(newURL, iframe) {
+          var originPage = new URLSearchParams(window.location.search).get('origin');
+          if (iframe.contentWindow.location.pathname.match("/default/redirect.xhtml")) {
+            var redirectedPage = new URLSearchParams(iframe.contentWindow.location.search).get("redirectPage");
+            var newPage = checkAndReturnUrl(redirectedPage, originPage);
+            if (newPage) {
+              window.location = newPage;
+            }
+            else {
+              window.location = redirectedPage;
+            }
+          }
+          else {
+            var newPage = checkAndReturnUrl(newURL, originPage);
+            if (newPage) {
+              window.location = newPage;
+            }
+          }
+        });
+      </script>
     </ui:define>
   </ui:composition>
 </h:body>
