Remove fat background image which was not shown anyway

--- a/workflow-ui/webContent/view/login.xhtml
+++ b/workflow-ui/webContent/view/login.xhtml
@@ -19,8 +19,7 @@
 <f:metadata>
   <f:viewParam name="originalUrl" value="#{loginBean.originalUrl}"/>
 </f:metadata>
-<h:body styleClass="login-body"
-  style="background-image: url('#{resource['ivy-webcontent:resources/images/background.jpg']}');">
+<h:body styleClass="login-body">
   <div class="login-panel ui-fluid">
     <div class="login-panel-header">
       <p:graphicImage name="resources/images/axon_ivy_logo_round.svg" />
