--- a/workflow-ui/webContent/view/login.xhtml
+++ b/workflow-ui/webContent/view/login.xhtml
@@ -36,9 +36,9 @@
           </div>
           <div class="ui-g-12">
             <h:panelGroup styleClass="md-inputfield">
-              <p:inputText id="username" autocomplete="off" value="#{loginBean.username}" required="true" />
-              <p:outputLabel for="username" indicateRequired="false">Username</p:outputLabel>
-              <p:message for="username" id="usernameMessage" />
+              <p:inputText id="userName" autocomplete="off" value="#{loginBean.username}" required="true" />
+              <p:outputLabel for="userName" indicateRequired="false">Username</p:outputLabel>
+              <p:message for="userName" id="userNameMessage" />
             </h:panelGroup>
           </div>
           <div class="ui-g-12">
